--- a/01 - Android/app/src/main/AndroidManifest.xml
+++ b/01 - Android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.movilescomputacion2023a">
+    package="com.example.movilescomputacion2023a" >
 
     <application
         android:allowBackup="true"
@@ -12,7 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MovilesComputacion2023A"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".CIntentExplicitoParametros"
+            android:exported="false" />
         <activity
             android:name=".BListView"
             android:exported="false" />
@@ -26,7 +29,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
