--- a/01 - Android/app/build.gradle
+++ b/01 - Android/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
@@ -36,7 +37,13 @@ android {
 }
 
 dependencies {
-
+    implementation platform('com.google.firebase:firebase-bom:30.1.0')
+    // Lubrearia de Autenticacion
+    implementation 'com.google.firebase:firebase-auth:21.1.0'
+    // UI libreria auth
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+    // Firestore
+    implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.9.0'
