--- a/01 - Android/app/src/main/AndroidManifest.xml
+++ b/01 - Android/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.MovilesComputacion2023A"
         tools:targetApi="31">
         <activity
+            android:name=".HFirebaseUIAuth"
+            android:exported="false" />
+        <activity
             android:name=".GGoogleMapsActivity"
             android:exported="false" />
         <!--
